crates/embucket-functions/src/tests/conversion/snapshots/query_timestamp_timestamp.snap
---
source: crates/embucket-functions/src/tests/conversion/to_timestamp.rs
description: "\"SELECT TO_TIMESTAMP(1000000000::TIMESTAMP) as t\""
---
Ok(
    [
        "+---------------------+",
        "| t                   |",
        "+---------------------+",
        "| 2001-09-09T01:46:40 |",
        "+---------------------+",
    ],
)
